--- a/Chat Bot/requirements.txt
+++ b/Chat Bot/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.6.0
 anyio==4.1.0
 beautifulsoup4==4.12.2
+better-profanity==0.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
 fasttext-wheel==0.9.2
@@ -12,6 +13,7 @@ httpcore==1.0.2
 httpx==0.25.2
 huggingface-hub==0.19.4
 idna==3.6
+inflection==0.5.1
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 mpmath==1.3.0
@@ -30,6 +32,7 @@ nvidia-nccl-cu12==2.18.1
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
 packaging==23.2
+profanityfilter==2.0.6
 pybind11==2.11.1
 pydantic==2.5.2
 pydantic_core==2.14.5
@@ -37,6 +40,7 @@ PyYAML==6.0.1
 regex==2023.10.3
 requests==2.31.0
 safetensors==0.4.1
+scipy==1.11.4
 sniffio==1.3.0
 soupsieve==2.5
 sympy==1.12
